# Programacao-Funcional-Monpoli

./: CHANGELOG.md  ChangeLog.md  Monopoli.cabal  Monopoly.cabal  README.md  Readme.md  atividade04-unitario-app.cabal  package.yaml  semana05.cabal  stack.yaml
app/: Main.hs
informação/: RailsAndUtils.txt  monopolyChanceCommunity.txt  monopolyDeeds.txt
src/: Atividade04.hs  Banker.hs  CasaType.hs  Definitions.hs  Eval.hs  Exercicios.hs  Interpreter.hs  Jogo.hs  Message.hs  PlayerType.hs  SupportMethods.hs  TileType.hs  Window.hs
test/: Spec.hs
